--- a/contact.html
+++ b/contact.html
@@ -147,13 +147,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3 py-3">
-          <h3>Reve<span class="fg-primary">Tive.</span></h3>
+          <h3>Creazion<span class="fg-primary">Plus.</span></h3>
         </div>
         <div class="col-lg-3 py-3">
           <h5>Contact Information</h5>
-          <p>301 The Greenhouse, Custard Factory, London, E2 8DY.</p>
+          <p>Accra Ghana.</p>
           <p>Email: example@mail.com</p>
-          <p>Phone: +00 112323980</p>
+          <p>Phone: +233-0000</p>
         </div>
         <div class="col-lg-3 py-3">
           <h5>Company</h5>
@@ -173,8 +173,10 @@
       </div>
 
       <hr>
+
     </div>
   </footer>
+
 
   
 <script src="assets/js/jquery-3.5.1.min.js"></script>
